--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "backend for Ascend notes app",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
