--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/KristoferWhitfield/AscendNotes#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1"
   },
   "jest": {
     "testEnvironment": "node"
