--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "backend for Ascend notes app",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "repository": {
     "type": "git",
@@ -17,7 +20,17 @@
   },
   "homepage": "https://github.com/KristoferWhitfield/AscendNotes#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
