--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server -p3001 --watch db.json",
-    "test": "jest"
+    "test": "jest --transformIgnorePatterns \"node_modules/(?!frontend)/\" --env=jsdom"
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
   },
@@ -31,12 +33,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "json-server": "^1.0.0-alpha.23",
     "vite": "^5.0.8"
   },
-  "jest": {
-    "testEnvironment": "jsdom"
+  "transform": {
+    "\\.js$": "<rootDir>/node_modules/babel-jest"
   }
 }
