--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4"
   }
