--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "deploy": "fly deploy",
     "server": "json-server -p3001 --watch db.json",
-    "test": "jest --transformIgnorePatterns \"node_modules/(?!frontend)/\" --env=jsdom"
+    "test": "jest --transformIgnorePatterns \"node_modules/(?!frontend)/\" --env=jsdom",
+    "logs": "fly logs"
   },
   "dependencies": {
     "axios": "^1.6.7",
